kotlin-ide/idea/testData/script/definition/highlighting/doNotSpeakAboutJava/script.kts
val <error descr="Can't use">java</error> = "j"
val <warning descr="Shouldn't use">scala</warning> = "s"

val result = <error descr="Can't use">java</error> + <warning descr="Shouldn't use">scala</warning>